--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,5 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+/Recursive Linked List Operation/nbproject/private/
+/Recursive Linked List Operation/build/
